--- a/lms/templates/hr_management/index.html
+++ b/lms/templates/hr_management/index.html
@@ -1,6 +1,6 @@
 <%inherit file="../main.html" />
 <%namespace name='static' file='../static_content.html'/>
-<link rel="stylesheet" href="${static.url("css/hr-management-style.css")}" type="text/css" media="all" />
+<link rel="stylesheet" href="${static.url("css/hr-management.css")}" type="text/css" media="all" />
 <%block name="pagetitle">${microsite} | HR Management</%block>
 
 
