--- a/lms/templates/hr_management/courses.html
+++ b/lms/templates/hr_management/courses.html
@@ -3,7 +3,7 @@
 <%!
 from django.core.urlresolvers import reverse
 %>
-<link rel="stylesheet" href="${static.url("css/hr-management-style.css")}" type="text/css" media="all" />
+<link rel="stylesheet" href="${static.url("css/hr-management.css")}" type="text/css" media="all" />
 <%block name="pagetitle">${microsite} | HR Management | Courses</%block>
 
 
