--- a/lms/templates/hr_management/manage_microsites.html
+++ b/lms/templates/hr_management/manage_microsites.html
@@ -25,7 +25,7 @@ from django.core.urlresolvers import reverse
     % endif
   </div>
   <div class="hr-management__container2">
-    <h1>Create a microsite:</h1>
+    <h1>Create a microsite</h1>
     <form action="${reverse('add_microsite')}" method="POST" class="microsite-manager-form">
       <div class="microsite-manager_group-row">
       <!-- contain our grouped inputs -->
