--- a/lms/templates/hr_management/manage_microsites.html
+++ b/lms/templates/hr_management/manage_microsites.html
@@ -29,7 +29,7 @@ from django.core.urlresolvers import reverse
         <div class="microsite-manager_group-col">
           <div class="group-header">Organization details:</div>
           <label>Organization long name</label>
-          <input id="org_long_name" type="text" name="org_long_name" value="${_(org_long_name)}"
+          <input id="org_long_name" type="text" name="org_long_name"
             placeholder="ex: My Organization (required)">
           <label>Organization short name (No spaces or special characters)</label>
           <input id="org_short_name" type="text" name="org_short_name"
