--- a/lms/templates/microsite_manager/index.html
+++ b/lms/templates/microsite_manager/index.html
@@ -53,7 +53,7 @@ from django.core.urlresolvers import reverse
       <!-- contain our form buttons -->
         <input type="hidden" name="hostname" value="${ hostname }" />
         <input type="hidden" name="csrfmiddlewaretoken" value="${ csrf_token }" />
-        <input type="submit" value="OK">
+        <input type="submit" value="Create">
       </div>
     </form>  
   </div>
