--- a/lms/templates/appsembler_api/set_password_email.html
+++ b/lms/templates/appsembler_api/set_password_email.html
@@ -1,7 +1,7 @@
 {% load i18n %}{% load url from future %}{% autoescape off %}
-{% blocktrans %}You're receiving this e-mail because an account has created to you on {{ site_name }}.{% endblocktrans %}
+{% blocktrans %}You're receiving this e-mail because an account has been created for you on {{ site_name }}.{% endblocktrans %}
 
-{% trans "Please go to the following to choose a new password and activate your account:" %}
+{% trans "Please click on the following link to choose a new password and activate your account:" %}
 {% block reset_link %}
 {{ protocol }}://{{ site_name }}{% url 'student.views.password_reset_confirm_wrapper' uidb36=uid token=token %}
 {% endblock %}
