--- a/lms/templates/certificates/_accomplishment-banner.html
+++ b/lms/templates/certificates/_accomplishment-banner.html
@@ -81,10 +81,10 @@ from django.template.defaultfilters import escapejs
                     </button>
                     %endif
 
-                    %if email_share_enabled
+                    %if email_share_enabled:
                     <button class="action action-email btn btn-overlay btn-small" id="action-email-view"
-                    onclick=self.location='mailto:?subject=email_subj&body=email_body'"; return false;">
-                        <i class="icon fa fa-print" aria-hidden="true"></i>
+                    onclick="self.location='mailto:?subject=email_subj&body=email_body'"; return false;">
+                        <i class="icon fa fa-email" aria-hidden="true"></i>
                         ${_("Email Certificate Link")}
                     </button>    
                     %endif                
