Fix LinkedIn hint share url

--- a/lms/templates/certificates/_accomplishment-banner.html
+++ b/lms/templates/certificates/_accomplishment-banner.html
@@ -53,7 +53,7 @@ from django.template.defaultfilters import escapejs
                     <!-- <dt>License number:</dt><dd> NASBA 103413</dd> -->
                     <dt>From:</dt><dd>${certificate_date_issued}</dd>
                     <dt>Expiration:</dt><dd>(check "Does not Expire")</dd>
-                    <dt>Certification url:</dt><dd>${certificate_verify_url}</dd>
+                    <dt>Certification url:</dt><dd>${share_url}</dd>
                   </dl>
                 </div>
                 %endif
